Fix wrapping hour buttons

--- a/assets/stylesheets/pages/team.styl
+++ b/assets/stylesheets/pages/team.styl
@@ -169,6 +169,7 @@ for hour in 0 1 2 3 4 5 6 7 22 23
     
   .app-sidebar--format-select
     margin-right: 0.8em
+    white-space: nowrap
     
   .timezone-list
     margin-top: 6em
